--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.11.0",
     "axios": "^1.7.0",
+    "echarts": "^5.5.1",
     "element-plus": "^2.7.3",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
