--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "sass": "^1.77.2",
+    "unplugin-vue-components": "^0.27.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.2"
   },
