--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "vue-router": "^4.3.2"
   },
   "devDependencies": {
+    "@iconify-json/ep": "^1.1.16",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
     "unocss": "^0.60.3",
     "unplugin-auto-import": "^0.18.2",
+    "unplugin-icons": "^0.19.2",
     "vite": "^5.2.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^2.0.6"
